--- a/index.html
+++ b/index.html
@@ -43,8 +43,9 @@
             <label for="rangoPrecio">Precio:</label>
             <input type="text" id="rangoPrecio" name="precio" value="" />
           </div>
-          <div class="botonField">
-            <input type="submit" class="btn white" value="Buscar" id="submitButton">
+          <div class="botonField flex">
+            <input type="button" class="btn white" value="Buscar" id="submitButton" onclick="searcher()">
+            <span id="search-error" class="message-error"></span>
           </div>
         </div>
       </form>
@@ -52,13 +53,14 @@
     <div id="tabs" style="width: 75%;">
       <ul>
         <li><a href="#tabs-1">Bienes disponibles</a></li>
-        <li><a href="#tabs-2">Mis bienes</a></li>
+        <li><a  onclick="getMyGoods()" href="#tabs-2">Mis bienes</a></li>
       </ul>
       <div id="tabs-1">
         <div class="colContenido" id="divResultadosBusqueda">
           <div class="tituloContenido card" style="justify-content: center;">
             <h5>Resultados de la búsqueda:</h5>
             <div class="divider"></div>
+            <div id="goods" class="goods"></div>
           </div>
         </div>
       </div>
@@ -68,6 +70,7 @@
           <div class="tituloContenido card" style="justify-content: center;">
             <h5>Bienes guardados:</h5>
             <div class="divider"></div>
+            <div id="MyGoods" class="goods"></div>
           </div>
         </div>
       </div>
